[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy/slime.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 46.0109

[node name="Slime" type="Node2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="SlimeKine" type="KinematicBody2D" parent="."]

[node name="SlimeAnimSprite" type="AnimatedSprite" parent="SlimeKine"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeKine"]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="SlimeKine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeKine/Area2D"]
shape = SubResource( 2 )

[node name="SlimeRay" type="RayCast2D" parent="SlimeKine"]

[connection signal="body_entered" from="SlimeKine/Area2D" to="." method="_on_Area2D_body_entered"]
